#738 removed scrollbar track and adjusted margins, fixed min widths so columns stay aligned as the window is resized

--- a/app/scss/publicFileViewer.scss
+++ b/app/scss/publicFileViewer.scss
@@ -66,13 +66,23 @@ body {
     .QVHeader
     {
         padding: 12px 14.75%;
-    }
 
-    .QVHeaderItemsContain .workoutBarViewHeader {
-        // width: 634px;
-        width: calc(100% - 13px);
-        // This will probably need to be adjusted once scroll bars are added to main column.
-        // The right side should align with the right side of the map.
+        .QVHeaderItemsContain 
+        {
+            min-width: 775px;
+
+            .workoutBarViewHeader {
+                // width: 634px;
+                width: calc(100% - 13px);
+                // This will probably need to be adjusted once scroll bars are added to main column.
+                // The right side should align with the right side of the map.
+
+                .workoutHeaderStats
+                {
+                    width: auto;
+                }
+            }
+        }
     }
 
 
@@ -153,6 +163,7 @@ body {
     {
         height: 100%;
         width: 100%;
+        min-width: 1100px;
     }
 
     .headerIcons
@@ -164,6 +175,7 @@ body {
     {
         padding: 0px  14.75%;
         height: calc(100% - 125px);
+        min-width: 1100px;
 
         .expandoRightColumn
         {
@@ -179,13 +191,15 @@ body {
             height: 100%;
 
             .expandoPackeryRegion {
-                padding: 12px 12px 0 12px;
+                padding: 12px 13px 0px 0px;
             }
 
             .graphToolbar .cutButtons
             {
                 display: none;
             }
+
+            overflow: visible;
         }
 
         select
